--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "stylelint-scss": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
