--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8",
     "autoprefixer": "^10.4.14",
+    "eslint-config-airbnb": "^19.0.4",
     "postcss": "^8.4.23",
     "stylelint-scss": "^5.0.0",
     "tailwindcss": "^3.3.2"
