--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "next": "^13.4.2",
+    "next-theme": "^0.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,7 +21,10 @@
     "@babel/eslint-parser": "^7.21.8",
     "autoprefixer": "^10.4.14",
     "eslint-config-airbnb": "^19.0.4",
+    "framer-motion": "^10.12.10",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.23",
+    "react-icons": "^4.8.0",
     "stylelint-scss": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
